^ FS#116 - "Having property editor remember its expanded property groups."
^ FS#218 - "Having file dialogs remember their type-selection, e.g. *.png or *.bmp"
^ Added "All image files" to the file type filter for the file browser for
  bitmap properties.
* Switch to Code::Blocks splashscreen class to fix linux transparency.
  This resolves FS#224 - "Splashscreen problem in Linux".

07/27/2007 Version 3.00.46 (Beta 3)
+ Added "column_sizes" and "row_sizes" properties to wxGrid.
  Resizing the columns/rows by dragging is the easiest way to use these.
+ Added events to wxStdDialogButtonSizer.
+ Added wxAuiNotebook.
+ FS#214 - "Create icon for wxAuiNotebook".
^ Reorganized wxGrid properties.
* Fixed FS#199 - "tooltips lost on XRC import"
* Fixed import of "enabled", "hidden", and "subclass" properties.
* Fixed "FS#208 - Error in generated OnUpdateUI event handler registration code."
* Fixed "Edit->Paste Object From Clipboard" was not enabled until the next selection.
* Fixed  FS#216 - "missing header file for wxDatePickerCtrl"
* Properties with floating-point values will be saved and generated using the decimal point,
  but user entry will use the separator ('.' or ',') according to the locale settings.
  This closes "FS#203 - sashgravity -> float".
+ Added "FS#211 - Optimized code/xrc generation in preview editors"
^ Massive font update.
    Default values for font properties are now allowed and encouraged.
    The "underline" and "family" subproperties are now recognized.
    Fixed FS#205 - "wxStaticText If you bold a font and then remove the bold, the size shows up wrong"
    Watch for bugs.
^ Applied patch from ChrisBorgolte which removes the need for wx2.6 compatiblity mode.
    -wxTHICK_FRAME and wxNO_3D styles have been removed from wxDialog. The project conversion wizard
     will take appropriate action.
^ Updated images in sample text in wxRichTextCtrl. This resolves FS#221.

06/13/2007 Version 3.00.45 (Beta 3)